[gd_scene load_steps=5 format=2]

[ext_resource path="res://Imgs/Theme/scalable/actions/edit-find-symbolic.svg" type="Texture" id=1]
[ext_resource path="res://Fonts/Bold32.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/InGame/PopUps/PopUpList.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Show"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="PopUpList" type="PanelContainer"]
anchor_left = 0.0166667
anchor_top = 0.166016
anchor_right = 0.983333
anchor_bottom = 0.947266
margin_left = -10.0
margin_top = 1.52588e-05
margin_right = -10.0
rect_min_size = Vector2( 580, 800 )
rect_pivot_offset = Vector2( 290, 400 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 573.0
margin_bottom = 828.0
rect_min_size = Vector2( 550, 0 )
rect_clip_content = true
custom_constants/separation = 20

[node name="Title" type="Label" parent="VBox"]
margin_right = 566.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 2 )
text = "Title"
__meta__ = {
"_edit_group_": true
}

[node name="search" type="HBoxContainer" parent="VBox/Title"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SearchEntry" type="LineEdit" parent="VBox/Title/search"]
visible = false
margin_left = 6.0
margin_right = 64.0
margin_bottom = 37.0
grow_horizontal = 0
rect_min_size = Vector2( 58, 0 )
rect_pivot_offset = Vector2( 437.788, 17.3495 )
placeholder_text = "Search"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SearchButton" type="TextureButton" parent="VBox/Title/search"]
margin_left = 529.0
margin_right = 566.0
margin_bottom = 37.0
rect_min_size = Vector2( 37, 37 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 1 )
texture_focused = ExtResource( 1 )
expand = true

[node name="HSeparator" type="HSeparator" parent="VBox"]
margin_top = 57.0
margin_right = 566.0
margin_bottom = 61.0

[node name="ListScroll" type="ScrollContainer" parent="VBox"]
margin_top = 81.0
margin_right = 566.0
margin_bottom = 761.0
grow_horizontal = 2
rect_min_size = Vector2( 0, 680 )
scroll_horizontal_enabled = false

[node name="List" type="VBoxContainer" parent="VBox/ListScroll"]
custom_constants/separation = 20

[node name="Cancel" type="Button" parent="VBox"]
margin_top = 781.0
margin_right = 566.0
margin_bottom = 821.0
rect_min_size = Vector2( 0, 40 )
text = "Cancel"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Show = SubResource( 1 )
[connection signal="text_changed" from="VBox/Title/search/SearchEntry" to="." method="_on_SearchEntry_text_changed"]
[connection signal="pressed" from="VBox/Title/search/SearchButton" to="." method="_on_SearchButton_pressed"]
[connection signal="pressed" from="VBox/Cancel" to="." method="_on_Cancel_pressed"]
